fixing alignment of favs card on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,9 @@ aside.col-lg-4 p-4 {
     #favouritesHeading, #clearFavourites {
         text-align: center !important;
     }
+    #favourites {
+        align-items: center;
+    }
 }
 
 #search-form input:focus-visible {
